Fixed tags wrapping on small screens

--- a/app/styles/components/_project.scss
+++ b/app/styles/components/_project.scss
@@ -57,10 +57,6 @@ section.section .projects {
 
   ul.tags {
     justify-content: center;
-
-    li:first-of-type {
-      margin: 0 $space-s;
-    }
   }
 }
 
